# braille-learner

./: .gitignore  README.md  config.py  download_model.py  download_vosk_model.py  main.py  migration_plan.md  pyproject.toml  setup.sh  test_audio.py  test_microphone.py  test_whisper.py  web_main.py
audio/: feedback.py  utils.py
braille/: __init__.py  mapping.py  render.py
display/: __init__.py  base.py  servo.py  sim.py
modules/: braille_mapper.py  servo_controller.py  speech_recognizer.py  tts_feedback.py
speech/: intent.py  vosk_recognizer.py
src/: index.html  script.js  style.css
tests/: test_braille_mapper.py  test_braille_render.py  test_intent.py  test_servo_controller.py
utils/: audio_helper.py
