[project]
name = "braille-learner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.131.0",
    "gpiozero>=2.0.1",
    "numpy>=2.4.2",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.99",
    "uvicorn>=0.41.0",
    "vosk>=0.3.45",
    "websockets>=16.0",
]
